--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -11,6 +11,10 @@ c_compiler:
 c_compiler_version:            # [unix]
   - 11                         # [osx]
   - 9                          # [linux]
+  - 7                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
 cxx_compiler:
   - gxx                        # [linux]
   - clangxx                    # [osx]
@@ -18,6 +22,10 @@ cxx_compiler:
 cxx_compiler_version:          # [unix]
   - 11                         # [osx]
   - 9                          # [linux]
+  - 7                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
 llvm_openmp:                   # [osx]
   - 11                         # [osx]
 fortran_compiler:              # [unix or win64]
@@ -38,14 +46,20 @@ m2w64_fortran_compiler:        # [win]
 CMAKE_GENERATOR:               # [win]
   - NMake Makefiles            # [win]
 
-cuda_compiler:                 # [linux64]
-  - nvcc                       # [linux64]
+cuda_compiler:                 # [linux64 or win]
+  - nvcc                       # [linux64 or win]
 cuda_compiler_version:         # [linux64 or win]
+  - None                       # [linux64 or win]
+  - 10.2                       # [linux64 or win]
+  - 11.0                       # [linux64 or win]
   - 11.1                       # [linux64 or win]
   - 11.2                       # [linux64 or win]
-cudnn:                  # [linux64 or win]
-  - 8                   # [linux64 or win]
-  - 8                   # [linux64 or win]
+cudnn:                         # [linux64 or win]
+  - undefined                  # [linux64 or win]
+  - 7                          # [linux64 or win]
+  - 8                          # [linux64 or win]
+  - 8                          # [linux64 or win]
+  - 8                          # [linux64 or win]
 
 _libgcc_mutex:
   - 0.1 conda_forge
@@ -107,29 +121,45 @@ channel_targets:
   - conda-forge main
 
 cdt_name:  # [linux]
-  - cos7   # [linux64]
-  - cos7   # [linux64]
+  - cos6   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
+  - cos7   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - cos7   # [linux and aarch64]
+  - cos7   # [linux and ppc64le]
+  - cos7   # [linux and armv7l]
+  - cos7   # [linux and s390x]
 
+  - cos6   # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
+  - cos7   # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - cos7   # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+  - cos7   # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+  - cos7   # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
 
 docker_image:                                   # [os.environ.get("BUILD_PLATFORM", "").startswith("linux-")]
-  - quay.io/condaforge/linux-anvil-cuda:11.1    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
-  - quay.io/condaforge/linux-anvil-cuda:11.2    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+  - quay.io/condaforge/linux-anvil-comp7        # [os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
+  - quay.io/condaforge/linux-anvil-cos7-x86_64  # [os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - quay.io/condaforge/linux-anvil-aarch64      # [os.environ.get("BUILD_PLATFORM") == "linux-aarch64"]
+  - quay.io/condaforge/linux-anvil-ppc64le      # [os.environ.get("BUILD_PLATFORM") == "linux-ppc64le"]
+  - quay.io/condaforge/linux-anvil-armv7l       # [os.environ.get("BUILD_PLATFORM") == "linux-armv7l"]
 
+  - quay.io/condaforge/linux-anvil-cuda:10.2       # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
+  - quay.io/condaforge/linux-anvil-cos7-cuda:10.2  # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - quay.io/condaforge/linux-anvil-cuda:11.0       # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+  - quay.io/condaforge/linux-anvil-cuda:11.1       # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+  - quay.io/condaforge/linux-anvil-cuda:11.2       # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("BUILD_PLATFORM") == "linux-64"]
 
 zip_keys:
   -                             # [unix]
     - c_compiler_version        # [unix]
     - cxx_compiler_version      # [unix]
     - fortran_compiler_version  # [unix]
+    - cudnn                     # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+    - cuda_compiler_version     # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+    - cdt_name                  # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+    - docker_image              # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("BUILD_PLATFORM") == "linux-64"]
   -
     - python
     - numpy
     - python_impl
-  -                             # [linux64]
-    - cudnn                     # [linux64]
-    - cuda_compiler_version     # [linux64]
-    - cdt_name                  # [linux64]
-    - docker_image              # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
 
 # aarch64 specifics because conda-build sets many things to centos 6
 # this can probably be removed when conda-build gets updated defaults
