--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -50,10 +50,10 @@ cuda_compiler:                 # [linux64 or win]
   - nvcc                       # [linux64 or win]
 cuda_compiler_version:
   - None
-  - 10.2                       # [linux64 or win]
-  - 11.0                       # [linux64 or win]
-  - 11.1                       # [linux64 or win]
-  - 11.2                       # [linux64 or win]
+  - 10.2                       # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+  - 11.0                       # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+  - 11.1                       # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+  - 11.2                       # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
 cudnn:
   - undefined
   - 7                          # [linux64 or win]
