--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -37,6 +37,10 @@ fortran_compiler_version:      # [unix or win64]
   - 9                          # [osx and x86_64]
   - 9                          # [linux]
   - 5                          # [win64]
+  - 7                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
 m2w64_cxx_compiler:            # [win]
