--- a/recipe/migrations/cuda92_100_101.yaml
+++ b/recipe/migrations/cuda92_100_101.yaml
@@ -15,9 +15,15 @@ __migrator:
 
 c_compiler_version:            # [linux64]
   - 7                          # [linux64]
+  - 7                          # [linux64]
+  - 7                          # [linux64]
 cxx_compiler_version:          # [linux64]
   - 7                          # [linux64]
+  - 7                          # [linux64]
+  - 7                          # [linux64]
 fortran_compiler_version:      # [linux64]
+  - 7                          # [linux64]
+  - 7                          # [linux64]
   - 7                          # [linux64]
 
 cuda_compiler_version:         # [linux64 or win]
