--- a/recipe/migrations/aws_crt_cpp01711.yaml
+++ b/recipe/migrations/aws_crt_cpp01711.yaml
@@ -2,6 +2,7 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  automerge: true
 aws_crt_cpp:
 - 0.17.11
 migrator_ts: 1639073448.4504304
