--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -387,6 +387,8 @@ bzip2:
   - 1
 cairo:
   - 1.16
+ccr:
+  - 1.3
 cfitsio:
   - 3.470
 coin_or_cbc:
@@ -521,6 +523,8 @@ libgdal:
   - '3.3'
 libgit2:
   - '1.3'
+libhugetlbfs:
+  - 2
 libiconv:
   - 1.16
 libkml:
